[metadata]
name = cbc.block
description = "Block algebra for Fenics/DOLFIN",
author = Joachim Berdal Haga
author_email = jobh@simula.no
license = LGPL-2.1-or-later
version = 3.0.0
url = https://github.com/blocknics/cbc.block

long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fenics-dolfin>=2017.1
    scipy
    matplotlib
[options.extras_require]
haznics =
    haznics
trilinos =
    pytrilinos
test =
    pytest
